sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:12: error: not found: value na
        na=na+1
        ^AlgCocktailSort2:21: error: not found: value nb
        nb=nb+1
        ^